Fixed login function to handle redundancy and if they click back button, also reattach listener only once auth is logged in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,10 @@
     <string name="School">School</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+
+
+    <string-array name="chapter_arrays">
+        <item>Miami</item>
+        <item>University of Dayton</item>
+    </string-array>
 </resources>
