--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,13 @@
     <string name="calendar">Calendar</string>
     <string name="songs">Songs</string>
 
+    <string name="test_school">Eta Delta</string>
+
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="chat_rooms_title">Chat Rooms</string>
+
     <string name="sign_out">Sign Out</string>
     <string name="send_button_label">Send</string>
     <string name="title_activity_setting">Settings</string>
@@ -28,4 +35,10 @@
         <item>Miami</item>
         <item>University of Dayton</item>
     </string-array>
+    
+    <!-- Content Description-->
+    <string name="photo_picker">Choose a photo to send</string>
+    <string name="image_recieved">Recieved Image</string>
+    <string name="member_photo">Member Profile photo</string>
+    <string name="fraternity">Beta Theta Pi Seal</string>
 </resources>
